<package format="2">
<name>b330</name>
<version>0.0.0</version>
<description>The b330 package</description>
<maintainer email="vrisag20@student.aau.dk">Victor Risager</maintainer>
<license>MIT</license>
<author email="vrisag20@student.aau.dk">Victor Risager</author>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_export_depend>roscpp</build_export_depend>
<exec_depend>roscpp</exec_depend>
<export> </export>
</package>